[package]
name = "rustdotenv"
version = "0.1.1"
edition = "2018"
authors = ["Sam Mobach <hello@sammobach.com>"]
description = "A tool to load env files into the environment"
repository = "https://github.com/nilpntr/rustdotenv"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envfile = "0.2.1"